# clab-prototype

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
clab_prototype/: config.py  main.py  main_callbacks.py
doc/assets/: clab_ceis_designer.puml  clab_ceis_shop.puml
