[tool.poetry]
name = "clab-prototype"
version = "0.1.0"
description = ""
authors = ["Alessandro Giugno <alessandro.giugno@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = {extras = ["diskcache"], version = "^2.17.0"}
pandas = "^2.2.0"
dash-cytoscape = "^1.0.0"
httpx = "^0.26.0"
# using https to install without ssh setup for container
clab-ceis = {git = "https://github.com/Interactions-HSG/clab-ceis.git"}
recipe-synth = {git = "https://github.com/Interactions-HSG/clab-recipe-synthesis.git", extras = ["dash"]}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
